Bug 334818 - Label doesn't pick up UI font changes at runtime
Summary: Label doesn't pick up UI font changes at runtime
Status: RESOLVED FIXED
Alias: None
Product: libplasma
Classification: Frameworks and Libraries
Component: components (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Marco Martin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-15 14:34 UTC by Eike Hein
Modified: 2014-12-28 22:43 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eike Hein 2014-05-15 14:34:28 UTC
When changing the "General" font in the Fonts KCM, existing PlasmaComponents.Label instances don't pick up the new font. Newly-constructed instances do, though.

A good testcase is the Kicker menu widget: Once the FullRepresentation popup is instanciated, those delegates stick around (unless a sycoca change happens), but subdialog delegates get freshly constructed when the first dialog is opened, and discarded when the dialog is closed.

Reproducible: Always
Comment 1 Kai Uwe Broulik 2014-12-28 21:05:48 UTC
It doesn't seem to pick up color changes (anymore?) either, switching to Breeze-Dark gives me darkgray text on black.
Comment 2 Kai Uwe Broulik 2014-12-28 21:12:58 UTC
I think the issue lie somewhere else. Label just binds to the theme.defaultFont, theme installs an event filter and emits a changed signal if it changes. But that event never gets emitted in the first place, the event filter doesn't work apparently.
Comment 3 Kai Uwe Broulik 2014-12-28 22:43:57 UTC
Git commit b4e1fd5f1ca389e17e0b5b771938eb59fb60535b by Kai Uwe Broulik.
Committed on 28/12/2014 at 22:42.
Pushed by broulik into branch 'master'.

Keep the event filter around so get notified of font changes at runtime

Changelog: Fix labels not picking up changes to font settings at runtime

REVIEW: 121728

M  +0    -6    src/plasma/private/theme_p.cpp

http://commits.kde.org/plasma-framework/b4e1fd5f1ca389e17e0b5b771938eb59fb60535b