Keep the event filter around so get notified of font changes at runtime

Changelog: Fix labels not picking up changes to font settings at runtime

REVIEW: 121728
BUG: 334818