src/plasma/private/theme_p.cpp
@@ -759,13 +759,7 @@ void ThemePrivate::setThemeName(const QString &tempThemeName, bool writeSettings
 
     if (colorsFile.isEmpty()) {
         colors = 0;
-        if (qApp) {
-            qApp->installEventFilter(this);
-        }
     } else {
-        if (qApp) {
-            qApp->removeEventFilter(this);
-        }
         colors = KSharedConfig::openConfig(colorsFile);
     }
 
